src/objects/appsolutely__Creditsafe_Person_Director__c.object
<CustomObject>
    <description>A CreditsafePersonDirectorsV2.</description>
    <fields>
        <fullName>appsolutely__City__c</fullName>
        <description>The City of the Address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>The Country of the Address.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Person Directors</relationshipLabel>
        <relationshipName>Person_Directors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_of_Birth__c</fullName>
        <description>The director’s date of birth.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Director_Id__c</fullName>
        <description>Director id.</description>
        <externalId>true</externalId>
        <label>Director Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Director_Type__c</fullName>
        <description>Type of director (example Person or Company).</description>
        <label>Director Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Full_Address__c</fullName>
        <description>Full Address</description>
        <label>Full Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Gender__c</fullName>
        <description>The director’s gender.</description>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number_Addition__c</fullName>
        <description>The House number addition of the Address.</description>
        <label>House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number__c</fullName>
        <description>The House number of the Address.</description>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Postcode__c</fullName>
        <description>The Postcode of the Address.</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Resignation_Date__c</fullName>
        <description>The date of resignation.</description>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Street__c</fullName>
        <description>The Street of the Address.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Telephone__c</fullName>
        <description>Phone number.</description>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Person Director</label>
    <nameField>
        <label>Creditsafe Person Directors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditsafe Person Directors</pluralLabel>
    <recordTypes>
        <fullName>appsolutely__Current_Director</fullName>
        <active>true</active>
        <description>Current Director</description>
        <label>Current Director</label>
    </recordTypes>
    <recordTypes>
        <fullName>appsolutely__Previous_Director</fullName>
        <active>true</active>
        <description>Previous Director</description>
        <label>Previous Director</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>